--- a/VZDemoMvcApp/VZDemoMvcApp/Angular/angular.json
+++ b/VZDemoMvcApp/VZDemoMvcApp/Angular/angular.json
@@ -36,7 +36,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "../Bundles/AngularOutput",
+            "outputPath": "../Scripts/Dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
