--- a/VZDemoMvcApp/VZDemoMvcApp/VZDemoMvcApp.csproj
+++ b/VZDemoMvcApp/VZDemoMvcApp/VZDemoMvcApp.csproj
@@ -161,6 +161,7 @@
     <Content Include="Angular\tsconfig.json" />
     <Content Include="Angular\tslint.json" />
     <Content Include="Angular\src\todo\todo.component.scss" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -251,6 +252,13 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
+  <PropertyGroup>
+    <PreBuildEvent>if $(ConfigurationName) == Debug (
+    npm run build --prefix $(ProjectDir)\Angular
+) ELSE (
+    npm run prod --prefix $(ProjectDir)\Angular
+)</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
