--- a/VZDemoMvcApp/VZDemoMvcApp/package.json
+++ b/VZDemoMvcApp/VZDemoMvcApp/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "prod": "ng build --configuration production --vendor-chunk=true"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
