--- a/VZDemoMvcApp/VZDemoMvcApp/Angular/package.json
+++ b/VZDemoMvcApp/VZDemoMvcApp/Angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prod": "ng build --configuration production --vendor-chunk=true"
+    "prod": "ng build"
   },
   "private": true,
   "dependencies": {
